--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link href="./resources/style.css" type="text/css" rel="stylesheet">
-  <title>Broadway Design</title>
+  <title>Broadway Design by Prachi</title>
 </head>
 <body>
   <div class="bg">
